refactor: Chuyen Service dung DTO